--- a/src/components/modals/CreateProductPopup.module.css
+++ b/src/components/modals/CreateProductPopup.module.css
@@ -14,10 +14,14 @@
 
 .container {
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	background-color: #fff;
 	padding: 40px;
 	border-radius: 8px;
-	min-width: 600px;
+	width: 600px;
 }
 
 .button {
@@ -49,6 +53,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+	width: 100%;
 }
 
 .input {
@@ -57,6 +62,7 @@
 	border: 1px solid #e1e7e9;
 	border-radius: 8px;
 	outline: none;
+	width: 100%;
 }
 
 .input::placeholder {
@@ -76,6 +82,7 @@
 	background-position: right 20px center;
 	background-size: 16px 16px;
 	appearance: none;
+	width: 100%;
 }
 
 .select.selected {
@@ -96,6 +103,7 @@
 	margin-top: 30px;
 	font-size: 18px;
 	transition: background-color 0.1s ease;
+	width: 100%;
 }
 
 .submitButton:hover {
@@ -104,40 +112,32 @@
 
 @media screen and (max-width: 750px) {
 	.container {
-		min-width: 500px;
+		width: 500px;
 	}
 }
 
 @media screen and (max-width: 600px) {
 	.container {
-		min-width: 400px;
+		width: 400px;
 	}
 }
 
 @media screen and (max-width: 500px) {
+	.container {
+		width: 100%;
+		padding: 20px;
+		margin: 0 20px;
+	}
+
 	.button {
+		top: -55%;
 		right: 0;
 	}
 }
 
-@media screen and (max-width: 490px) {
-	.container {
-		min-width: 300px;
-	}
-}
-
 @media screen and (max-width: 430px) {
-	.container {
-		width: 250px;
-	}
-
 	.input {
-		font-size: 14px;
 		padding: 10px;
-	}
-
-	.input::placeholder {
-		font-size: 14px;
 	}
 
 	.select {
