--- a/src/components/modals/CreateProductPopup.module.css
+++ b/src/components/modals/CreateProductPopup.module.css
@@ -82,6 +82,7 @@
 	background-position: right 20px center;
 	background-size: 16px 16px;
 	appearance: none;
+	background-color: #fff;
 	width: 100%;
 }
 
