--- a/src/components/ProductsList/ProductsList.module.css
+++ b/src/components/ProductsList/ProductsList.module.css
@@ -1,33 +1,62 @@
 .list {
-  list-style-type: none;
-  display: grid;
-  gap: 20px;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-  padding: 30px 0;
+	list-style-type: none;
+	display: grid;
+	gap: 20px;
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+	padding: 30px 0;
 }
 
 .emptyMessage {
-  margin-top: 60px;
-  margin-bottom: auto;
-  font-weight: 600;
-  font-size: 20px;
+	margin-top: 50px;
+	margin-bottom: auto;
+	font-weight: 600;
+	font-size: 20px;
+}
+
+.loaderContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	color: #444;
+	margin-top: 50px;
+}
+
+.loader {
+	width: 30px;
+	height: 30px;
+	border: 5px solid #eee;
+	border-top: 5px solid #346eee;
+	border-radius: 50%;
+	animation: spin 1s linear infinite;
+	margin-bottom: 10px;
+}
+
+.loaderText {
+	font-size: 16px;
+}
+
+@keyframes spin {
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 @media screen and (max-width: 1000px) {
-  .list {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
+	.list {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
 }
 
 @media screen and (max-width: 770px) {
-  .list {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
+	.list {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
 }
 
 @media screen and (max-width: 540px) {
-  .list {
-    justify-content: center;
-    grid-template-columns: repeat(1, minmax(0, 300px));
-  }
+	.list {
+		justify-content: center;
+		grid-template-columns: repeat(1, minmax(0, 300px));
+	}
 }
